# SelfDrivingCar

./: .~lock.nodeGraph_Localization.pptx#  Installations.txt  nodeGraph_Localization.pptx
LABS/Sockets_Labs/build-simpleServer-Desktop_Qt_5_2_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
LABS/Sockets_Labs/client_sockets/: main.cpp
LABS/Sockets_Labs/server/: main.cpp  server.pro  server.pro.user.d683eed
LABS/Sockets_Labs/simpleServer/: main.cpp  simpleServer.pro
LABS/hello_ros/: CMakeLists.txt  command ro run  hello.cpp  package.xml
LABS/pthread_queues/: main.cpp  pthread_queues.pro
Launch_params/robo_car/: CMakeLists.txt  package.xml
Launch_params/robo_car/launch/: dual_ekf_navsat_example.launch
Launch_params/robo_car/params/: dual_ekf_navsat_GP.yaml  dual_ekf_navsat_example.yaml
Session Two/: Embedded Linux_AMIT_2.pptx
Session_Nine/: IMU.pptx  compass.c
Session_Nine/Compass_AVR/: i2c.c  i2c.h  main.c  quaternion_compass_new_v8.ino
session eight/: .~lock.Hardware interface RPI.odp#  Hardware interface RPI.odp  PID.pptx  compass.h
session eight/GPS/: GPS.pro  main.cpp
session_Ten/: Session_Ten.pptx  imu_talker.cpp  localization_launch.txt
session_seven/: kalman_filter.pptx  kalman_servocontrol.ino
sockets_linux/: local_client  server
